WIP: Attempting a completely new approach to UI

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,18 +1,18 @@
 [versions]
 agp = "8.3.2"
 kotlin = "1.9.23"
-coreKtx = "1.12.0"
+coreKtx = "1.13.0"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
 lifecycleRuntimeKtx = "2.7.0"
-activityCompose = "1.8.2"
-composeBom = "2024.04.00"
+activityCompose = "1.9.0"
+composeBom = "2024.04.01"
 # Dagger Hilt
 ksp = "1.9.23-1.0.20"
 hilt = "2.51.1"
 hiltNavigationCompose = "1.2.0"
-datastorePreferences = "1.0.0"
+datastorePreferences = "1.1.0"
 # Kotlin serialization
 kotlinSerialization = "1.9.23"
 kotlinxSerializationJson = "1.6.3"
@@ -20,6 +20,8 @@ kotlinxSerializationJson = "1.6.3"
 retrofit = "2.11.0"
 # OkHttp
 okhttp = "4.12.0"
+# WorkManager
+workManager = "2.9.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -49,6 +51,8 @@ retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = 
 retrofit-converter-kotlinx-serialization = { group = "com.squareup.retrofit2", name = "converter-kotlinx-serialization", version.ref = "retrofit" }
 # OkHttp
 okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp"}
+# WorkManager
+work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workManager" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
