--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <queries>
+        <package android:name="org.telegram.messenger" />
+    </queries>
+
     <application
         android:name=".MainApplication"
         android:allowBackup="true"
