Migrate to new style plugin name notation

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -60,8 +60,8 @@ work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "jetpackComposeNavigation" }
 
 [plugins]
-androidApplication = { id = "com.android.application", version.ref = "agp" }
-jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+android-application = { id = "com.android.application", version.ref = "agp" }
+jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 # Dagger Hilt
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "daggerHilt" }
