--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -74,6 +74,7 @@ kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-cor
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
+android-library = { id = "com.android.library", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 # Dagger Hilt
@@ -83,5 +84,6 @@ dagger-hilt = { id = "com.google.dagger.hilt.android", version.ref = "daggerHilt
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 # Build logic convention plugins
 smsrelay-android-application = { id = "smsrelay.android.application" }
+smsrelay-android-library = { id = "smsrelay.android.library" }
 smsrelay-hilt = { id = "smsrelay.hilt" }
 smsrelay-jvm-library = { id = "smsrelay.jvm.library" }
