--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.7.0"
+agp = "8.7.1"
 kotlin = "2.0.20"
 coreKtx = "1.13.1"
 junit = "4.13.2"
@@ -28,6 +28,8 @@ jetpackComposeNavigation = "2.8.1"
 accompanist = "0.36.0"
 # Kotlin Coroutines
 kotlinxCoroutines = "1.9.0"
+# Desugaring
+androidJdkDesugaring = "2.1.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -71,6 +73,8 @@ android-gradle-plugin = { group = "com.android.tools.build", name = "gradle", ve
 kotlin-gradle-plugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
 # Kotlin coroutines
 kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinxCoroutines" }
+# Desugaring
+android-desugaring-jdk = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "androidJdkDesugaring" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
